To avoid scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -21,4 +21,5 @@ body {
 	background-position: 50% 50%;
 	font-family: 'FuturaBook';
 	color: #fff;
+	overflow: hidden;
 }
